# lunchbox

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  Trunk.toml  build.rs  emulator_data.json  flake.nix  index.html  platforms.csv
.cargo/: config.toml
.github/workflows/: release.yml
backend/: Cargo.toml  build.rs
backend/migrations/: 0001_initial.sql  0003_favorites.sql  0007_libretro_title.sql  0009_game_files.sql  0012_firmware.sql  0013_emulator_launch_profiles.sql  0014_launch_template_overrides.sql  0015_minerva_download_queue.sql  0016_game_uid.sql
backend/src/: api.rs  arcade.rs  controllers.rs  emulator.rs  exo.rs  firmware.rs  handlers.rs  keyring_store.rs  lib.rs  logging.rs  region_priority.rs  router.rs  state.rs
backend/src/db/: mod.rs
backend/src/images/: download_service.rs  emumovies.rs  events.rs  libretro.rs  media_types.rs  mod.rs  source_selector.rs  web_search.rs
backend/src/import/: launchbox.rs  libretro.rs  mod.rs
backend/src/scanner/: checksum.rs  file_scanner.rs  mod.rs
backend/src/scraper/: mod.rs  screenscraper.rs  steamgriddb.rs
backend/src/torrent/: mod.rs
backend/src/torrent/clients/: mod.rs  qbittorrent.rs
crates/lunchbox-cli/: Cargo.toml
crates/lunchbox-cli/src/: download.rs  enrich.rs  launchbox.rs  main.rs  minerva.rs  unified_import.rs
crates/lunchbox-core/: Cargo.toml
crates/lunchbox-core/src/: lib.rs  tags.rs
crates/lunchbox-core/src/db/: mod.rs
crates/lunchbox-core/src/import/: launchbox.rs  libretro.rs
crates/lunchbox-core/src/scanner/: file_scanner.rs
crates/lunchbox-core/src/scraper/: igdb.rs  screenscraper.rs  steamgriddb.rs
db/: .gitignore  emulators.db.zst
docs/: firmware-plan.md
electron/: main.cjs  package-lock.json  package.json
electron/scripts/: prepare-release.cjs
emulator_details/: 3do_interactive_multiplayer.csv  aamber_pegasus.csv  acorn_archimedes.csv  acorn_atom.csv  acorn_electron.csv  all_emulators.csv  amstrad_cpc.csv  amstrad_gx4000.csv  android.csv  apf_imagination_machine.csv  apogee_bk_01.csv  apple_ii.csv  apple_iigs.csv  apple_ios.csv  apple_mac_os.csv  arcade.csv  arduboy.csv  atari_2600.csv  atari_5200.csv  atari_7800.csv  atari_800.csv  atari_jaguar.csv  atari_jaguar_cd.csv  atari_lynx.csv  atari_st.csv  atari_xegs.csv  bally_astrocade.csv  bandai_super_vision_8000.csv  bbc_microcomputer_system.csv  benesse_pocket_challenge_v2.csv  camputers_lynx.csv  casio_loopy.csv  casio_pv_1000.csv  coleco_adam.csv  colecovision.csv  commodore_128.csv  commodore_64.csv  commodore_amiga.csv  commodore_amiga_cd32.csv  commodore_cdtv.csv  (+172 more)
js/: box3d.js
packaging/flatpak/: io.github.benwbooth.lunchbox.yml
packaging/linux/: io.github.benwbooth.lunchbox.desktop  io.github.benwbooth.lunchbox.metainfo.xml
scripts/: build-database.sh  build_emulators_db.py  dev.sh  download_igdb_platform_icons.py  download_launchbox_platform_icons.py  generate_emulators_toml.py  launch-app.sh  platform_mapping.json  scrape_all_emulators.py  scrape_emulators.py  scrape_rom_sources.py
src/: app.rs  backend_api.rs  lib.rs  navigation.rs  tauri.rs  ui_state.rs
src-tauri/: Cargo.toml  build.rs  emulators.toml  tauri.conf.json
src-tauri/migrations/: 0002_play_stats.sql  0004_game_images.sql  0005_unified_media.sql  0006_platform_source_names.sql  0008_emulator_preferences.sql  0008_game_images.sql  0010_minerva.sql  0011_pc_game_installs.sql
src-tauri/src/: api.rs  commands.rs  emulator.rs  endpoints.rs  exo.rs  firmware.rs  handlers.rs  keyring_store.rs  lib.rs  main.rs  router.rs  state.rs  tags.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/images/: download_service.rs  emumovies.rs  events.rs  libretro.rs  media_types.rs  mod.rs  source_selector.rs  web_search.rs
src-tauri/src/import/: launchbox.rs  libretro.rs  mod.rs
src-tauri/src/scanner/: file_scanner.rs
src-tauri/src/scraper/: mod.rs
src-tauri/src/torrent/: mod.rs
src-tauri/src/torrent/clients/: aria2.rs  embedded.rs  mod.rs  qbittorrent.rs  transmission.rs
src/components/: box_3d_viewer.rs  controller_mapping.rs  emulator_updates.rs  game_details.rs  game_grid.rs  image_sources_wizard.rs  import_progress.rs  lazy_image.rs  minerva_download_queue.rs  mod.rs  queue_status.rs  rom_import.rs  settings.rs  sidebar.rs  toolbar.rs  video_player.rs
src/components/minigame/: ai.rs  entities.rs  game.rs  gpu.rs  mod.rs  physics.rs  sprites.rs  world.rs
src/components/minigame/shaders/: compute.wgsl  game.wgsl  render.wgsl
styles/: main.css
tools/: build-appimage.sh  build-flatpak.sh
