[package]
name = "lunchbox-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
chrono = "0.4"
chrono-tz = "0.10"
iana-time-zone = "0.1"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "HtmlCollection", "Request", "RequestInit", "RequestMode", "Response", "Headers", "IntersectionObserver", "IntersectionObserverEntry", "IntersectionObserverInit", "DomRect", "DomRectReadOnly", "HtmlCanvasElement", "CanvasRenderingContext2d", "ImageData", "KeyboardEvent"] }
urlencoding = "2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
gloo-net = "0.6"
chrono = { version = "0.4", features = ["serde"] }
gloo-timers = "0.3.0"
futures = "0.3"

[workspace]
resolver = "2"
members = ["src-tauri", "crates/lunchbox-core", "crates/lunchbox-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ben"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"

# Checksums
crc32fast = "1"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"

# Parallel processing
rayon = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "deflate"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

[profile.dev]
opt-level = 1
# Prevent incremental compilation linker errors with rust-lld
lto = "off"
codegen-units = 256

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
