[package]
name = "lunchbox"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Cross-platform emulator frontend"

[lib]
name = "lunchbox_lib"
crate-type = ["rlib"]

[[bin]]
name = "dev_server"
path = "src/bin/dev_server.rs"

[[bin]]
name = "test_image_sources"
path = "src/bin/test_image_sources.rs"

[build-dependencies]
chrono = "0.4"
chrono-tz = "0.10"
iana-time-zone = "0.1"
quick-xml = "0.37"

[dependencies]
# Workspace dependencies
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
crc32fast.workspace = true
md-5.workspace = true
sha1.workspace = true
sha2.workspace = true
hex.workspace = true
rayon.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender.workspace = true

# Workspace crates
lunchbox-core = { path = "../crates/lunchbox-core" }

# Additional
directories = "5"
walkdir = "2"
urlencoding = "2"
keyring = { version = "3", features = ["linux-native", "apple-native", "windows-native"] }
zstd = "0.13"
zip = "2"
flate2 = "1.1.5"
bzip2 = "0.5.2"
xz2 = "0.1.7"

# HTTP API for dev mode
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
async-trait = "0.1"

# rspc + HTTP API
rspc = "0.3"
rspc-axum = "0.2"
specta = "2.0.0-rc.20"
suppaftp = { version = "7.1.0", features = ["tokio", "native-tls"] }
async-stream = "0.3"
futures = "0.3"

# Emulator detection and path handling
which = "7"
shellexpand = "3"
dirs = "5"

lava_torrent = "0.7"

[dev-dependencies]
tempfile = "3"
