[package]
name = "lunchbox"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Cross-platform emulator frontend"

[lib]
name = "lunchbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "lunchbox"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Workspace dependencies
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
crc32fast.workspace = true
md-5.workspace = true
sha1.workspace = true
rayon.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Additional
directories = "5"
walkdir = "2"
urlencoding = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
